--- a/.github/workflows/notify.yaml
+++ b/.github/workflows/notify.yaml
@@ -1,5 +1,3 @@
-name: Notify
-
 on:
   release:
     types: [published]
@@ -8,10 +6,17 @@ jobs:
   notify:
     runs-on: ubuntu-latest
 
-    env:
-      NOTIFY_SLUG: ibm-garage-cloud/ibm-garage-iteration-zero
+    strategy:
+      matrix:
+        repo:
+          - ibm-garage-cloud/ibm-garage-iteration-zero
+          - ibm-garage-cloud/garage-terraform-modules
 
     steps:
-      - name: Publish repository dispatch
-        run: |
-          curl -XPOST -u "${{ secrets.USERNAME}}:${{secrets.TOKEN}}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" https://api.github.com/repos/${{env.NOTIFY_SLUG}}/dispatches --data '{"event_type": "released"}'
+      - name: Repository dispatch ${{ matrix.repo }}
+        uses: ibm-garage-cloud/action-repository-dispatch@main
+        with:
+          notifyRepo: ${{ matrix.repo }}
+          eventType: released
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
