--- a/module.yaml
+++ b/module.yaml
@@ -27,13 +27,11 @@ versions:
     - name: cluster_type
       moduleRef:
         id: cluster
-        output: platform
-        path: type_code
+        output: platform.type_code
     - name: cluster_version
       moduleRef:
         id: cluster
-        output: platform
-        path: version
+        output: platform.version
     - name: olm_version
       scope: ignore
 
